fixed hidden header menu on smaller windows than col-lg

--- a/gallant/static/gallant/css/styles.css
+++ b/gallant/static/gallant/css/styles.css
@@ -727,16 +727,17 @@ button:active {
     color: white;
     background: none;
     padding: 0;
-    width: 30px;
-    height: 30px;
-    background: black url("/static/img/menu-icon@2x.png") 50% no-repeat;
+    width: 35px;
+    height: 35px;
+    background: #d40371 url("/static/img/menu-icon@2x.png") 50% no-repeat;
     -webkit-background-size: 17px 12px;
     -moz-background-size: 17px 12px;
     -o-background-size: 17px 12px;
     background-size: 17px 12px;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
+    -webkit-border-radius: 45px;
+    -moz-border-radius: 45px;
+    border-radius: 45px;
+    font-size: 12px;
 }
 
 .navbar .navbar-toggle:before {
@@ -773,7 +774,36 @@ button:active {
     transition: all 0.33s cubic-bezier(0.694, 0.0482, 0.335, 1);
 }
 
+@media (max-width: 1200px) {
+    ul#dropdown-menu.nav.pull-right {
+        width: 100%;
+    }
+
+    li.dropdown-menu-element {
+        width: 100%;
+    }
+
+    li.dropdown-menu-element a {
+        margin: auto;
+    }
+
+    #dropdown-menu li:first-child {
+        margin-left: 10px;
+    }
+
+    li#settings-toggle-group {
+        display: none;
+    }
+}
+
+@media (min-width: 1200px) {
+    li#account-settings-menu-element {
+        display: none;
+    }
+}
+
 @media (min-width: 768px) and (max-width: 1200px) {
+
     .navbar-collapse.collapse {
         display: none !important;
     }
@@ -786,11 +816,6 @@ button:active {
         float: none;
     }
 
-}
-
-.header-19 .navbar-collapse.collapse,
-.header-16 .navbar-collapse.collapse {
-    display: none !important;
 }
 
 @media (max-width: 1200px) {
@@ -1017,7 +1042,6 @@ header .brand img:first-child {
     left: 0;
     top: 0;
     z-index: 100;
-    height: 116px;
     padding-top: 0;
     padding-bottom: 0;
     background: #ffffff;
@@ -1027,14 +1051,6 @@ header .brand img:first-child {
 
 .header-5 > .container {
     position: relative;
-}
-
-.header-5 .navbar {
-    position: absolute;
-    z-index: 2;
-    /*top: 45px;*/
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-weight: 500;
 }
 
 .header-5 .navbar.navbar-fixed-top {
@@ -3217,7 +3233,7 @@ button#section_edit.btn.btn-default.edit_button.btn-add, button#section_delete.b
 }
 
 button#section_delete.btn.btn-default.delete_button.btn-add.btn-list {
-    padding-left: 20px;
+    padding-left: 15px;
 }
 
 #form .btn.btn-default.btn-submit, #add_note_form .btn-default, .btn.btn-default.btn-submit {
@@ -3272,7 +3288,6 @@ label, label.control-label {
 }
 
 button#section_delete.btn.btn-default.delete_button.btn-add {
-    padding-left: 15px;
 }
 
 p.pending {
@@ -3356,14 +3371,14 @@ p.sub-main.home {
 }
 
 .animate-hide {
-  transition: all linear 0.5s;
-  opacity: 1;
+    transition: all linear 0.5s;
+    opacity: 1;
 }
 
 .animate-hide.ng-hide {
-  line-height: 0;
-  opacity: 0;
-  padding: 0 10px;
+    line-height: 0;
+    opacity: 0;
+    padding: 0 10px;
 }
 
 .alert-dismissable .close, .alert-dismissible .close {
@@ -3372,18 +3387,19 @@ p.sub-main.home {
 
 .alert.ng-enter,
 .alert.ng-leave {
-  -webkit-transition:0.5s linear all;
-  transition:0.5s linear all;
+    -webkit-transition: 0.5s linear all;
+    transition: 0.5s linear all;
 }
 
 .alert.ng-enter,
 .alert.ng-leave.ng-leave-active {
-  opacity:0;
-  height: 0px;
+    opacity: 0;
+    height: 0px;
 }
+
 .alert.ng-leave,
 .alert.ng-enter.ng-enter-active {
-  opacity:1;
+    opacity: 1;
 }
 
 p i {
